Bug 453978 - In Configuration window, Apply button stays disabled after change in range fields
Summary: In Configuration window, Apply button stays disabled after change in range fi...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 22.04.0
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-18 11:36 UTC by Mehrad Mahmoudian
Modified: 2022-05-18 20:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A short video to demo the issue (204.00 KB, video/mp4)
2022-05-18 11:36 UTC, Mehrad Mahmoudian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mehrad Mahmoudian 2022-05-18 11:36:58 UTC
Created attachment 148942 [details]
A short video to demo the issue

SUMMARY

Changing the values in some of the fields of Kate does not toggle the Apply button to become Enabled. I have attached a very short video to demo this, but this is not limited to the box that I'm showcasing, for instance, the one right above it is also having the same behavior. This does not happen in Dolphin configuration window and therefore I'm reporting it to Kate.

STEPS TO REPRODUCE
1. From the menu navigate to: Settings > Configure Kate...
2. click on any of the boxes that it's value can be inserted by keyboard (e.g Line Height Multiplier)
3. either type something, **or** click on the arrows to increase or decrease the values
4. observe that the Apply button stays disabled

OBSERVED RESULT


EXPECTED RESULT

if the arrows are pressed or the value is changed, the Apply button gets Enabled.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kernel Version: 5.15.38-1-MANJARO (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4770K CPU @ 3.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2
Kate Version: 22.04.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-05-18 16:06:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/371
Comment 2 Waqar Ahmed 2022-05-18 20:27:13 UTC
Git commit 879883d90b638ee75d0845360f70dbd1dd7245ef by Waqar Ahmed.
Committed on 18/05/2022 at 16:05.
Pushed by cullmann into branch 'master'.

observe changes on textChanged for QSpinBox

editFinished is only emitted only focus loss which means you have to
explicitly lose focus to be able to click apply

M  +8    -3    src/dialogs/kateconfigpage.cpp
M  +4    -2    src/dialogs/kateconfigpage.h

https://invent.kde.org/frameworks/ktexteditor/commit/879883d90b638ee75d0845360f70dbd1dd7245ef