observe changes on textChanged for QSpinBox

editFinished is only emitted only focus loss which means you have to
explicitly lose focus to be able to click apply

BUG: 453978